--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,15 @@
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
   "files.associations": {
-    "vector": "cpp"
+    "vector": "cpp",
+    "xstring": "cpp",
+    "algorithm": "cpp",
+    "utility": "cpp"
+  },
+  "[cpp]": {
+    "editor.wordBasedSuggestions": true,
+    "editor.suggest.insertMode": "insert",
+    "editor.semanticHighlighting.enabled": true
   }
+
 }
