ACNL_Wrapper を統合

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
     "xstring": "cpp",
     "algorithm": "cpp",
     "utility": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "thread": "cpp",
+    "xlocale": "cpp",
+    "string_view": "cpp"
   },
   "[cpp]": {
     "editor.wordBasedSuggestions": true,
