--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
     "xutility": "cpp",
     "*.tcc": "cpp",
     "memory_resource": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "codecvt": "cpp"
   }
 }
